--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,24 +14,14 @@
     <nav>
     <a href="/">Home</a>
     <a href="/">Dashboard</a>
-    {{!-- {{#if loggedIn}}
-    <button id="logout" class="btn-no-style">Logout</button>
-    {{else}}
-    <a href="/login">Login</a>
-    {{/if}} --}}
-  </nav>
+    </nav>
     <h1>DevLearn Hub</h1>
   </header>
   
-  {{!-- <main>
+  <main>
     <div class="gallery">
       {{{body}}}
       </div>
-      </main> --}}
-
-  {{!-- {{#if loggedIn}}
-  <script src="/js/logout.js"></script>
-  {{/if}} --}}
-</body>
-
+      </main>
+  </body>
 </html>
