sessions added and login js updates

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,6 +66,16 @@ nav a:hover {
   background-color: var(--dark);
 }
 
+.gallery {
+  flex: 4;
+  background-color: #fff;
+  padding: 50px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
+
 .btn-no-style {
   background: none;
   border: none;
@@ -80,6 +90,19 @@ nav a:hover {
 img {
   max-width: 100%;
   height: auto;
+}
+
+.painting {
+  width: 50%;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 25px;
+}
+
+.painting-details {
+  text-align: center;
+  padding: 10px 20px;
+  font-weight: bold;
 }
 
 /* CARDS */
@@ -138,55 +161,4 @@ img {
   flex-flow: column wrap;
   align-content: flex-start;
   align-items: center;
-}
-
-
-.post-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.post-card {
-  margin: 20px;
-  flex: 0 1 300px;
-  border: 7px double var(--dark);
-  border-radius: 10px;
-  background-color: var(--light);
-  color: var(--dark);
-}
-
-.post-card header {
-  color: var(--light);
-  font-weight: bold;
-  text-transform: uppercase;
-  margin: 0;
-  background-color: var(--tertiary);
-  padding: 0.625rem;
-  border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
-}
-
-.post-card .card-body {
-  font-size: 1.4rem;
-  text-align: center;
-  font-weight: bold;
-}
-
-.post-card .post-title {
-  margin: 1rem 0;
-}
-
-.post-card .post-details {
-  margin-bottom: 1rem;
-}
-
-.post-card .post-author {
-  font-size: 0.9rem;
-  font-weight: normal;
-}
-
-.post-card .post-date {
-  font-size: 0.9rem;
-  font-weight: normal;
-  color: var(--secondary);
 }
