--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,17 +11,25 @@
 
 <body>
   <header>
-    <nav>
-    <a href="/">Home</a>
-    <a href="/">Dashboard</a>
-    </nav>
     <h1>DevLearn Hub</h1>
   </header>
-  
+  <nav>
+    <a href="/">Home</a>
+    <a href="/">Dashboard</a>
+    {{#if loggedIn}}
+    <button id="logout" class="btn-no-style">Logout</button>
+    {{else}}
+    <a href="/login">Login</a>
+    {{/if}}
+  </nav>
   <main>
     <div class="gallery">
       {{{body}}}
-      </div>
-      </main>
-  </body>
+    </div>
+  </main>
+  {{#if loggedIn}}
+  <script src="/js/logout.js"></script>
+  {{/if}}
+</body>
+
 </html>
