--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -1,5 +1,5 @@
 <div class="post-card">
   <h2>{{ this.title }}</h2>
-  <p>Posted by {{ this.user_id }} on {{ formatDate this.createdAt }}</p>
+  <p>Posted by {{user.username}} on {{ formatDate this.createdAt }}</p>
   <p>{{ this.content }}</p>
 </div>
