--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,13 +1,13 @@
 <section class="dashboard">
   <h2>Welcome to your Dashboard</h2>
 
-  {{#each posts}}
+  {{!-- {{#each posts}}
     <div class="post-card">
       <h2>{{ title }}</h2>
       <p>Posted by {{ user.username }} on {{ formatDate createdAt }}</p>
       <p>{{ content }}</p>
     </div>
-  {{/each}}
+  {{/each}} --}}
 
-  <button id="new-post-button">+ New Post</button>
+  <button id="new-post-btn">+ New Post</button>
 </section>
