--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -1,5 +1,7 @@
-<div class="post-card">
-  <h2>{{ this.title }}</h2>
-  <p>Posted by {{user.username}} on {{ formatDate this.createdAt }}</p>
-  <p>{{ this.content }}</p>
-</div>
+<a href="/post/{{this.id}}">
+  <div class="post-card">
+    <h2>{{this.title}}</h2>
+    <p>Posted by {{user.username}} on {{formatDate this.createdAt}}</p>
+    <p>{{this.content}}</p>
+  </div>
+</a>
