new post routes added

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,6 +8,7 @@
       <p>{{ content }}</p>
     </div>
   {{/each}} --}}
-
+  <a href="/post/new">
   <button id="new-post-btn">+ New Post</button>
+  </a>
 </section>
