--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,24 +13,12 @@
       <div class="form-group">
         <button class="btn btn-primary" type="submit">Log In</button>
       </div>
-    </form>
-  </div>
-  <div class="login-card">
-    <h2 class="page-title">Signup</h2>
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="username-signup">Username:</label>
-        <input class="form-input" type="text" id="username-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">Sign Up</button>
+       <div class="form-group">
+        <a href="/signup">Sign up instead</a>
       </div>
     </form>
   </div>
+  
 </div>
 
 <script src="./js/login.js"></script>
