Delete post route added

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,7 +4,7 @@
   <div class="post-container">
     {{#if posts.length}}
       {{#each posts}}
-        <a href="/post/{{ id }}">
+        <a href="/post/{{ id }}/edit">
           <div class="post-banner">
             <h2>{{ title }}</h2>
             <p>{{ formatDate createdAt }}</p>
