--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -1,4 +1,11 @@
 <section class="single-post">
+  {{!-- {{#if isOwner}}
+  <div>
+    <a href="/post/{{post.id}}/edit">Edit</a>
+      <a href="/post/{{post.id}}/delete">Delete</a>
+  </div>
+  {{/if}} --}}
+  
   <h2>{{post.title}}</h2>
   <p>{{post.content}}</p>
   <p>Posted by {{post.user.username}} on {{formatDate post.createdAt}}</p>
