--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,154 +1,111 @@
 :root {
-  --primary: #3d5852;
-  --secondary: #86938f;
-  --tertiary: #5e877f;
-  --quatrinary: #6c6b67;
-  --light: #e3e4e3;
-  --dark: #182c23;
-  --error: rgb(228, 46, 1);
-  --border-radius: 0.3rem;
-}
-
-body {
-  font-family: Arial;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  justify-content: flex-start;
-  background-color: var(--quatrinary);
-}
-
-a {
-  color: var(--dark);
-  text-decoration: none;
-}
-
-a:visited {
-  color: inherit;
+  --light: #ffffff;
+  --dark: #023f26;
+  --primary: #f8f7f3;
 }
 
 header {
-  padding: 40px;
-  text-align: center;
-  background: var(--primary);
+  background-color: var(--light);
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo-link {
+  order: 0;
+  text-align: left;
+}
+
+.logo-img {
+  height: 30px;
+}
+
+nav {
+  order: 1;
+  margin-top: 10px;
+  text-align: right;
+}
+
+.nav-link {
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 10px;
+  color: var(--dark);
+  text-decoration: none;
+  transition: color 0.3s, background-color 0.3s;
+}
+
+.nav-link:hover {
   color: var(--light);
+  background-color: var(--dark);
+}
+
+.btn-border {
+  border: 2px solid var(--dark);
+  border-radius: 0px;
 }
 
 main {
   display: flex;
   flex-wrap: wrap;
-  flex-grow: 1;
-  background-color: #fff;
-  padding: 50px;
 }
 
-/* main {
-  flex: 4;
-  background-color: #fff;
-  padding: 50px;
+.img-body {
+  flex: 0 0 50%; /* Take up 50% of the container */
+  position: relative;
+  background-image: url("/images/ricardo-gomez-angel-5YM26lUicfU-unsplash.jpg");
+  background-size: cover;
+  background-position: center;
+  background-color: var(--primary);
+  opacity: 0.5;
+}
+
+.hbs-body {
+  flex: 0 0 50%; /* Take up 50% of the container */
+  background-color: var(--primary);
   display: flex;
-  flex-flow: row wrap;
+  align-items: center;
   justify-content: center;
-  align-items: center;
-} */
-
-aside {
-  flex: 0;
-  background-color: var(--tertiary);
-  padding: 80px;
-  text-align: left;
-  color: var(--light);
 }
 
-nav {
-  display: flex;
-  background-color: var(--secondary);
+.hbs-body > * {
+  text-align: center; /* Center align the content within hbs-body */
 }
 
-nav a {
-  color: var(--light);
-  padding: 14px 20px;
-  text-decoration: none;
-  text-align: center;
-}
+/* MOBILE CODE BELOW */
+@media screen and (max-width: 768px) {
+  header {
+    flex-direction: column;
+    align-items: center;
+  }
 
-nav a:hover {
-  color: var(--secondary);
-  background-color: var(--dark);
-}
+  .logo-link {
+    order: 0;
+    text-align: center;
+    width: 100%;
+  }
 
-.btn-no-style {
-  background: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 100%;
-  transition: color 0.1s;
-  margin-left: 16px;
-}
+  nav {
+    order: 1;
+    margin-top: 20px;
+    text-align: center;
+  }
 
-.post-container {
-  height: 500px; /* Adjust the height as needed */
-  overflow-y: scroll;
-  background-color: #86938f;
-}
+  .nav-link {
+    display: inline-block;
+    margin: 10px 0;
+  }
 
-/* CARDS */
-.card {
-  margin: 20px;
-  flex: 0 1 300px;
-  border: 7px double var(--dark);
-  border-radius: 10px;
-  background-color: var(--light);
-  color: var(--dark);
-}
-
-.login-card {
-  margin: 0 0 20px 0;
-  flex: 0 0 50%;
-  max-width: 50%;
-  padding: 5px;
-  border: 3px solid var(--dark);
-  border-radius: var(--border-radius);
-  border-style: double;
-  border-width: thick;
-  background-color: #577a7c;
-  color: var(--light);
-}
-
-.card header {
-  color: var(--light);
-  font-weight: bold;
-  text-transform: uppercase;
-  margin: 0;
-  background-color: var(--tertiary);
-  padding: 0.625rem;
-  border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
-}
-
-.card-body {
-  font-size: 1.4rem;
-  text-align: center;
-  font-weight: bold;
-}
-
-.gallery-name {
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  text-shadow: 2px 2px 5px var(--secondary);
-  border: 10px groove var(--light);
-  padding-top: 30px;
-  padding-bottom: 30px;
-  padding-right: 100px;
-  padding-left: 100px;
-}
-
-/* LAYOUT */
-.container {
-  display: flex;
-  flex-flow: column wrap;
-  align-content: flex-start;
-  align-items: center;
+  .img-body,
+  .hbs-body {
+    flex: 1 0 100%; /* Take up 100% of the container on mobile */
+  }
+  .hbs-body {
+    background-image: url("/images/ricardo-gomez-angel-5YM26lUicfU-unsplash.jpg");
+    background-size: cover;
+    background-position: center;
+    background-color: var(--primary);
+    opacity: 0.5;
+  }
 }
