--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
-<section class="dashboard">
-  <h2>Welcome to your Dashboard</h2>
+<section>
+  <h2 class="dashboard-header">Welcome to your Dashboard</h2>
 
   <div class="post-container">
     {{#if posts.length}}
@@ -17,6 +17,6 @@
   </div>
 
   <a href="/post/new">
-    <button id="new-post-btn">+ New Post</button>
+    <button id="new-post-btn" class="btn btn-border">+ New Post</button>
   </a>
 </section>
