--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DevLearn Hub</title>
+  <link rel="icon" type="image/png" href="/images/devlearn_favicon.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/css/jass.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
@@ -12,7 +16,7 @@
 <body>
   <header>
   <a href="/" class="logo-link">
-   <img src="images/devlearn_logo.png" alt="DEVlearn" class="logo-img">
+   <img src="/images/devlearn_logo.png" alt="DEVlearn" class="logo-img">
   </a>
 
   <nav>
@@ -37,5 +41,5 @@
   <script src="/js/logout.js"></script>
   {{/if}}
 </body>
-
+<footer>&copy; Created by Isabel Vaughan for Monash University Boot Camps</footer>
 </html>
