--- a/views/partials/comment.handlebars
+++ b/views/partials/comment.handlebars
@@ -1,4 +1,4 @@
 <div class="comment-card">
-  <p>{{content}}</p>
-  <p>-- {{user.username}}, {{formatDate createdAt}}</p>
+  <h4>{{content}}</h4>
+  <p class="comment-user">{{user.username}} on {{formatDate createdAt}}</p>
 </div>
