--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,18 +3,18 @@
     <h2 class="page-title">Login</h2>
     <form class="form login-form">
       <div class="form-group">
-        <label for="username-login">Username:</label>
-        <input class="form-input" type="text" id="username-login" />
+        <label for="username-login" class="dark-text">Username</label>
+        <input class="form-input-secondary" type="text" id="username-login" />
       </div>
       <div class="form-group">
-        <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
+        <label for="password-login" class="dark-text">Password</label>
+        <input class="form-input-secondary" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">Log In</button>
+        <button class="btn btn-border" type="submit">Log In</button>
       </div>
        <div class="form-group">
-        <a href="/signup">Sign up instead</a>
+        <a href="/signup" class="login-signup">Sign up instead</a>
       </div>
     </form>
   </div>
