--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -1,10 +1,11 @@
-<h2>New Post</h2>
-<form>
-  <label for="title">Title:</label>
-  <input type="text" id="title" name="title" required>
-  <label for="content">Content:</label>
-  <textarea id="content" name="content" required></textarea>
+<form class="new-post">
+  <h2 class="page-title" style="margin-bottom: 50px;">New Post</h2>
+  <label for="title" class="secondary-text" >Title</label>
+  <input type="text" id="title" name="title" class="form-input-dark" required>
+  <label for="content" class="secondary-text" >Content</label>
+  <textarea id="content" name="content" class="form-input-dark" required></textarea>
+  <button id="submit-btn" type="submit" class="btn btn-border">Create Post</button>
 </form>
-<button id="submit-btn" type="submit">Create Post</button>
+
 
 <script src="/js/new-post.js"></script>
