--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -1,7 +1,7 @@
 <a href="/post/{{this.id}}">
   <div class="post-card">
     <h2>{{this.title}}</h2>
-    <p>Posted by {{user.username}} on {{formatDate this.createdAt}}</p>
-    <p>{{this.content}}</p>
+    <p class="post-username">Posted by {{user.username}} on {{formatDate this.createdAt}}</p>
+    <h4>{{this.content}}</h4>
   </div>
 </a>
