--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,18 +3,18 @@
     <h2 class="page-title">Signup</h2>
     <form class="form signup-form">
       <div class="form-group">
-        <label for="username-signup">Username:</label>
-        <input class="form-input" type="text" id="username-signup" />
+        <label for="username-signup" class="secondary-text">Username</label>
+        <input class="form-input-dark" type="text" id="username-signup" />
       </div>
       <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+        <label for="password-signup" class="secondary-text">Password</label>
+        <input class="form-input-dark" type="password" id="password-signup" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">Sign Up</button>
+        <button class="btn btn-border" type="submit">Sign Up</button>
       </div>
       <div class="form-group">
-        <a href="/login">Log In instead</a>
+        <a href="/login" class="login-signup">Log In instead</a>
       </div>
     </form>
   </div>
