--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -1,10 +1,10 @@
 <section class="single-post">
- 
+<div class="post-card">
   <h2>{{post.title}}</h2>
-  <p>{{post.content}}</p>
-  <p>Posted by {{post.user.username}} on {{formatDate post.createdAt}}</p>
-
-  <h2>Comments</h2>
+  <p class="post-username">Posted by {{post.user.username}} on {{formatDate post.createdAt}}</p>
+  <h4>{{post.content}}</h4>
+</div>
+  <h2 class="dark-text">Comments</h2>
 {{#each comments}}
   {{> comment}}
 {{/each}}
@@ -13,7 +13,7 @@
     <input type="hidden" name="post_id" value="{{post.id}}">
     <textarea name="content" id="content" placeholder="Enter your comment"></textarea>
   </form>
-  <button type="submit" id="submit-btn">Submit</button>
+  <button type="submit" id="submit-btn" class="btn btn-border">Submit</button>
   
 </section>
 <script>const postId = {{post.id}};</script>
