--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -1,11 +1,10 @@
-<form class="new-post">
-  <h2 class="page-title" style="margin-bottom: 50px;">New Post</h2>
-  <label for="title" class="secondary-text" >Title</label>
+<form>
+  <h2 class="page-header dark-text">New Post</h2>
+  <label for="title" class="secondary-text"><b>Title</b></label>
   <input type="text" id="title" name="title" class="form-input-dark" required>
-  <label for="content" class="secondary-text" >Content</label>
+  <label for="content" class="secondary-text" style="margin-top: 50px;"><b>Content</b></label>
   <textarea id="content" name="content" class="form-input-dark" required></textarea>
-  <button id="submit-btn" type="submit" class="btn btn-border">Create Post</button>
+  <button id="submit-btn" type="submit" class="btn btn-border" style="margin-top: 50px;">Create Post</button>
 </form>
-
 
 <script src="/js/new-post.js"></script>
