--- a/views/partials/comment.handlebars
+++ b/views/partials/comment.handlebars
@@ -1,4 +1,4 @@
 <div class="comment-card">
   <h4>{{content}}</h4>
-  <p class="comment-user">{{user.username}} on {{formatDate createdAt}}</p>
+  <p class="username">{{user.username}} on {{formatDate createdAt}}</p>
 </div>
