--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,23 +1,21 @@
-<div class="row justify-space-between-md">
   <div class="login-card">
-    <h2 class="page-title">Signup</h2>
+    <h2 class="page-header dark-text">Signup</h2>
     <form class="form signup-form">
       <div class="form-group">
         <label for="username-signup" class="secondary-text">Username</label>
         <input class="form-input-dark" type="text" id="username-signup" />
       </div>
       <div class="form-group">
-        <label for="password-signup" class="secondary-text">Password</label>
+        <label for="password-signup" class="secondary-text" style="margin-top: 50px;">Password</label>
         <input class="form-input-dark" type="password" id="password-signup" />
       </div>
       <div class="form-group">
-        <button class="btn btn-border" type="submit">Sign Up</button>
+        <button class="btn btn-border" type="submit" style="margin: 50px;">Sign Up</button>
       </div>
       <div class="form-group">
         <a href="/login" class="login-signup">Log In instead</a>
       </div>
     </form>
   </div>
-</div>
 
 <script src="./js/signup.js"></script>
