--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,54 +9,46 @@
 * {
   font-family: "Poppins", sans-serif;
 }
-/* HEADER */
-header {
-  background-color: var(--light);
-  padding: 10px 20px;
+
+/* LAYOUT */
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+}
+
+.hbs-body {
+  flex: 1;
+  background-color: var(--primary);
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  padding: 0 15rem;
+  text-align: center;
+  height: 100vh;
+  overflow: auto;
+  flex-wrap: wrap;
 }
 
-.logo-link {
-  order: 0;
-  text-align: left;
-}
-
-.logo-img {
-  height: 30px;
-}
-
-nav {
-  order: 1;
-  margin-top: 10px;
-  text-align: right;
-}
-
-.nav-link {
-  display: inline-block;
-  padding: 10px 20px;
-  margin: 10px;
-  color: var(--dark);
-  background-color: var(--light);
-  text-decoration: none;
-  transition: color 0.3s, background-color 0.3s;
-}
-
-.nav-link:hover {
-  color: var(--light);
-  background-color: var(--dark);
-}
-
+/* GLOBAL STYLES */
 /* BUTTONS */
 .btn {
   display: inline-block;
   padding: 10px 20px;
-  margin: 50px 10px;
+  margin: 0 10px;
   color: var(--dark);
   background-color: transparent;
   text-decoration: none;
   transition: color 0.3s, background-color 0.3s;
+  border-radius: 0px;
 }
 
 .btn:hover {
@@ -69,7 +61,7 @@ nav {
   border-radius: 0px;
 }
 
-/* TEXT COLOUR  */
+/* TEXT */
 .dark-text {
   color: var(--dark);
   font-weight: bold;
@@ -80,159 +72,15 @@ nav {
   font-weight: bold;
 }
 
-/* LAYOUT */
-
-main {
-  display: flex;
-  flex-wrap: wrap;
-  flex: 1;
+.page-header {
+  margin-bottom: 50px;
 }
 
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-}
-
-.img-body {
-  flex: 0 0 50%; /* Take up 50% of the container */
-  position: relative;
-  background-image: url("/images/ricardo-gomez-angel-5YM26lUicfU-unsplash.jpg");
-  background-size: cover;
-  background-position: center;
-  background-color: var(--primary);
-  opacity: 0.5;
-}
-
-.hbs-body {
-  flex: 0 0 50%; /* Take up 50% of the container */
-  background-color: var(--primary);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0 2rem;
-}
-
-.hbs-body > * {
-  text-align: center; /* Center align the content within hbs-body */
-}
-
-/* HOME PAGE POSTS */
-
-.post-link {
-  text-decoration: none;
-  display: block;
-}
-
-.post-card {
-  width: 100%;
-  margin: 2rem 0;
-  border: 4px solid var(--secondary);
-  border-radius: 500px;
-  padding: 2rem 4rem;
-  color: var(--dark);
-  text-align: center;
-}
-
-.comment-card {
-  width: 100%;
-  margin: 2rem 0;
-  border: 4px solid var(--dark);
-  border-radius: 500px;
-  padding: 1rem;
-  color: var(--dark);
-  text-align: center;
-}
-
-.comment-user {
+.username {
   font-size: smaller;
-  margin-top: 1rem;
 }
 
-/* FORM */
-
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 2rem;
-}
-
-input[type="hidden"],
-textarea {
-  width: 100%;
-  padding: 0.8rem;
-  border: 4px solid var(--secondary);
-  border-radius: 500px;
-  margin-bottom: 1rem;
-  color: var(--dark);
-  resize: vertical;
-  text-align: center;
-}
-
-/* DASHBOARD */
-
-.dashboard-header {
-  color: var(--dark);
-  padding-top: 2rem;
-}
-
-.post-banner {
-  width: 100%;
-  margin: 2rem 0;
-  border-radius: 500px;
-  padding: 1rem 4rem;
-  color: var(--primary);
-  background-color: var(--secondary);
-  text-align: center;
-  transition: background-color 0.3s;
-  text-decoration: none;
-}
-
-.post-banner a {
-  color: var(--primary);
-  text-decoration: none;
-}
-
-.post-banner:hover {
-  background-color: var(--secondary-darker);
-}
-
-/* FOOTER  */
-
-footer {
-  color: var(--dark);
-  background-color: var(--light);
-  text-align: center;
-  padding: 15px;
-  margin-top: auto;
-}
-
-/* POST */
-
-.post-username {
-  font-size: smaller;
-  margin-bottom: 1rem;
-}
-/* LOGIN/SIGNUP PAGE  */
-
-.login-signup {
-  color: var(--secondary);
-  text-decoration: underline;
-  transition: color 0.3s;
-  text-transform: uppercase;
-}
-
-.login-signup:hover {
-  color: var(--secondary-darker);
-}
-
+/*  FORM INPUT */
 .form-input-dark {
   background-color: var(--dark);
   border-radius: 500px;
@@ -257,51 +105,87 @@ footer {
   text-align: center;
 }
 
-.form-input-dark:-webkit-autofill {
-  background-color: var(--dark);
-  border-radius: 500px;
-  width: 100%;
-  padding: 0.75rem;
-  color: var(--primary);
-  font-size: 1.2rem;
-  border-radius: 5000px;
-  border-color: transparent;
-}
-
-.form-input-secondary:-webkit-autofill {
-  background-color: var(--secondary);
-  border-radius: 500px;
-  width: 100%;
-  padding: 0.75rem;
-  color: var(--primary);
-  font-size: 1.2rem;
-  border-radius: 5000px;
-  border-color: transparent;
-}
-
-/* NEW POST FORM */
-.new-post {
+/* HEADER */
+header {
+  background-color: var(--light);
+  padding: 10px 20px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  margin-bottom: 1rem;
-  text-align: center;
+  justify-content: space-between;
 }
 
-.new-post input[type="text"],
-.new-post textarea {
-  width: 80%;
+.logo-link {
+  text-align: left;
 }
 
-.page-title {
+.logo-link img {
+  height: 30px;
+}
+
+/* HOME PAGE */
+.post-card {
+  width: 100%;
+  margin: 2rem 0;
+  border: 4px solid var(--secondary);
+  border-radius: 500px;
+  padding: 2rem 4rem;
   color: var(--dark);
 }
 
-/* EDIT POST */
-.button-container {
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  gap: 10px;
+.comment-card {
+  width: 100%;
+  margin: 2rem 0;
+  border: 4px solid var(--dark);
+  border-radius: 500px;
+  padding: 1rem;
+  color: var(--dark);
+  text-align: center;
+}
+
+.comment-input {
+  width: 100%;
+  padding: 0.8rem;
+  border: 4px solid var(--secondary);
+  border-radius: 500px;
+  resize: vertical;
+  text-align: center;
+}
+
+/* DASHBOARD */
+.post-banner {
+  width: 100%;
+  margin: 2rem 0;
+  border-radius: 500px;
+  padding: 1rem 4rem;
+  color: var(--primary);
+  background-color: var(--secondary);
+  transition: background-color 0.3s;
+}
+
+.post-banner:hover {
+  background-color: var(--secondary-darker);
+}
+
+/* LOGIN / SIGN UP */
+.login-signup {
+  color: var(--secondary);
+  text-decoration: underline;
+  transition: color 0.3s;
+  text-transform: uppercase;
+}
+
+.login-signup:hover {
+  color: var(--secondary-darker);
+}
+
+/* FOOTER  */
+
+footer {
+  color: var(--dark);
+  background-color: var(--light);
+  text-align: center;
+  padding: 15px;
+  margin-top: auto;
 }
 
 /* MOBILE CODE BELOW */
@@ -328,14 +212,11 @@ footer {
     margin: 10px 0;
   }
 
-  .main {
-    flex-direction: column;
-  }
-  .post-card {
-    padding: 2rem;
-  }
-  .img-body,
   .hbs-body {
-    flex: 1 0 100%;
+    padding: 0 3rem;
+  }
+
+  footer {
+    font-size: smaller;
   }
 }
