--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,7 @@
 <section>
-  <h2 class="dashboard-header">Welcome to your Dashboard</h2>
+  <h2 class="page-header dark-text">Welcome to your Dashboard</h2>
 
-  <div class="post-container">
+  <div>
     {{#if posts.length}}
       {{#each posts}}
         <a href="/post/{{ id }}/edit">
@@ -17,6 +17,6 @@
   </div>
 
   <a href="/post/new">
-    <button id="new-post-btn" class="btn btn-border">+ New Post</button>
+    <button id="new-post-btn" class="btn btn-border" style="margin-top: 50px;">+ New Post</button>
   </a>
 </section>
