--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,23 +1,21 @@
-<div class="row justify-space-between-md">
-  <div class="login-card">
-    <h2 class="page-title">Login</h2>
+  <div>
+    <h2 class="page-header dark-text">Login</h2>
     <form class="form login-form">
       <div class="form-group">
         <label for="username-login" class="dark-text">Username</label>
         <input class="form-input-secondary" type="text" id="username-login" />
       </div>
       <div class="form-group">
-        <label for="password-login" class="dark-text">Password</label>
+        <label for="password-login" class="dark-text" style="margin-top: 50px;">Password</label>
         <input class="form-input-secondary" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-border" type="submit">Log In</button>
+        <button class="btn btn-border" type="submit" style="margin: 50px;">Log In</button>
       </div>
        <div class="form-group">
         <a href="/signup" class="login-signup">Sign up instead</a>
       </div>
     </form>
-  </div>
   
 </div>
 
