--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -1,7 +1,7 @@
 <section class="single-post">
 <div class="post-card">
   <h2>{{post.title}}</h2>
-  <p class="post-username">Posted by {{post.user.username}} on {{formatDate post.createdAt}}</p>
+  <p class="username">Posted by {{post.user.username}} on {{formatDate post.createdAt}}</p>
   <h4>{{post.content}}</h4>
 </div>
   <h2 class="dark-text">Comments</h2>
@@ -11,9 +11,9 @@
   
   <form>
     <input type="hidden" name="post_id" value="{{post.id}}">
-    <textarea name="content" id="content" placeholder="Enter your comment"></textarea>
+    <textarea name="content" id="content" placeholder="Enter your comment" class="comment-input"></textarea>
   </form>
-  <button type="submit" id="submit-btn" class="btn btn-border">Submit</button>
+  <button type="submit" id="submit-btn" class="btn btn-border" style="margin: 50px;">Submit</button>
   
 </section>
 <script>const postId = {{post.id}};</script>
